# LabFREED

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  base36.py  cit_mine.yaml  examples.py  main.py  main_.py  publish.ps1  publish.sh  publish_commands  pyproject.toml  unit_utilities.py  update_readme.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi-publish.yml  run-tests.yml
DisplayNameExtension/: DisplayNameExtension.py
PAC_ID/: PAC_ID.py  parse.py  recommendations_to_imply_keys.py  serialize.py
PAC_ID/tests/: test_pac_id_parse.py
TREXExtension/: TREXExtension.py
build_tools/: generate_docs.py  publish.ps1  publish_commands  update_readme.py
docs/: index.html  labfreed.html  search.js
docs/labfreed/: PAC_CAT.html  PAC_ID.html  base_model.html
examples/: cit_mine copy.yaml  cit_mine.yaml  coupling-information-table  examples.py  examples_extended.py
labfreed/: __init__.py  labfreed_infrastructure.py  parse.py  parse_pac.py  validation.py
labfreed/DisplayNameExtension/: DisplayNameExtension.py  base36.py
labfreed/IO/: __init__.py  generate_label.py  generate_qr.py  pac_id_with_extensions.py  parse_pac.py
labfreed/PAC_CAT/: category_base.py  data_model copy.py  data_model.py  pac_cat.py  predefined_categories.py
labfreed/PAC_ID/: __init__.py  data_model.py  extension.py  extensions.py  id_segment.py  pac_id.py  parse.py  serialize.py  url_parser.py  url_serializer.py  well_known_segment_keys.py
labfreed/PAC_ID_Resolver/: __init__.py  cit.yaml  cit_v1.py  cit_v2.py  data_types.py  resolver.py  services.py
labfreed/QR_Generator/: generate_qr.py
labfreed/TREX/: UneceUnits.json  data_model.py  parse.py  serialize.py  unece_units.py
labfreed/TREXExtension/: data_model.py  parse.py  unit_utilities.py
labfreed/__temp__/: category_base.py  cit_v1.py  pac_id.py
labfreed/conversion_tools/: uncertainty.py  unit_utilities.py
labfreed/display_name_extension/: __init__.py  display_name_extension.py
labfreed/pac_cat/: __init__.py  category_base.py  pac_cat.py  predefined_categories.py
labfreed/pac_id/: extension.py  pac_id.py  url_parser.py  url_serializer.py
labfreed/pac_id_resolver/: cit_common.py  cit_v1.py  cit_v2.py  resolver.py  services.py
labfreed/python_convenience/: data_table.py  quantity.py
labfreed/qr/: __init__.py  generate_qr.py
labfreed/trex/: __init__.py  table_segment.py  trex.py  trex_base_models.py  value_segments.py
labfreed/utilities/: base36.py  extension_intertpreters.py  utility_types.py
labfreed/well_known_extensions/: __init__.py  default_extension_interpreters.py  display_name_extension.py  trex_extension.py
tests/: test_sanity_check.py
tests/generated_tests/: generate_tests.py  instructions.txt  test_definitions.yaml  test_standard_tests__pac_cat.py  test_standard_tests__pac_id.py
tests/test_(de)_serialization_incl_extension/: test__parse.py  test__serialize.py
tests/test_PAC_CAT/: test_PAC_CAT.py  test_PAC_CAT_parse.py  test_PAC_CAT_parse_serialize_sequence.py  test_PAC_CAT_serialize.py
tests/test_PAC_ID/: test_PAC_ID_serialize.py  test_pac_id_parse.py  test_pac_id_serialization.py
tests/test_TREX/: test_TREX_parse.py  test_TREX_serialize.py
tests/test_TREXExtension/: test_TREX.py  test_TREX_parse.py  test_TREX_serialize.py
tests/test_de_serialization_incl_extension/: test__parse.py  test__serialize.py
tests/test_resolver/: cit.yaml  coupling-information-table  test_cit_v1.py
(+13 files in other folders)
