[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "labfreed"
authors = [{name = "Reto Thürer", email = "thuerer.r@buchi.com"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "numpy>=2.2.4",
    "pydantic>=2.11.3",
    "segno>=1.6.6",
    "typer>=0.15.2"
    "PyYAML>=6.0.2"
    "jsonpath-ng>=1.7.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pdoc>=15.0.1"
    "flit>=3.12.0"

]

[tool.flit.module]
name = "labfreed"


requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
